src/test/ui-fulldeps/proc-macro/load-panic.stderr
thread 'rustc' panicked at 'nope!', $DIR/auxiliary/derive-panic.rs:22:5
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc-macro derive panicked
  --> $DIR/load-panic.rs:17:10
   |
17 | #[derive(A)]
   |          ^
   |
   = help: message: nope!

